// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterList Snapshot Tests > should match snapshot with date filter 1`] = `
<div>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Date de création est égal à 15/10/2023
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with different comparators 1`] = `
<div>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Name débute par Test
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Email termine par @example.com
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Role est différent de guest
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with empty filters 1`] = `<div />`;

exports[`FilterList Snapshot Tests > should match snapshot with multiple filters 1`] = `
<div>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Username contient admin
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Status est égal à active
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Created After est après 01/01/2023
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with numeric filter 1`] = `
<div>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Age est supérieur à 25
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
</div>
`;

exports[`FilterList Snapshot Tests > should match snapshot with single string filter 1`] = `
<div>
  <button
    class="_tag_ni9pn_6 _tag--information_ni9pn_35 _tag--lg_ni9pn_114 mr-3"
    data-testid="filter-list_tag_item"
    type="button"
  >
    Nom d'utilisateur contient john_doe
    <span
      class="_icon_i4xp0_2 _icon--xmark_i4xp0_442 _tag__close_ni9pn_111"
    />
  </button>
</div>
`;
